--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="whitelist-fields">
         <label>
           Wallet Address or Farcaster Handle
-          <input id="wallet" type="text" placeholder="0x... or Base name" required />
+          <input id="wallet" type="text" placeholder="0x... or Base name"  />
         </label>
       </div>
 
@@ -22,7 +22,7 @@
       <div id="waitlist-fields" style="display:none;">
         <label>
           Email Address
-          <input id="email" type="email" placeholder="you@example.com" required />
+          <input id="email" type="email" placeholder="you@example.com"  />
         </label>
       </div>
 
@@ -31,5 +31,7 @@
     <div id="msg" aria-live="polite" class="note"></div>
   </div>
   <script src="app.js"></script>
+
+   
 </body>
 </html>
